# whip

./: .gitignore  Cargo.toml  MoonZoon.toml  mzoon_commit
backend/: Cargo.toml
backend/private/: build_id  private.pem  public.pem
backend/src/: .env  auth.rs  db.rs  main.rs
frontend/: Cargo.toml  wasm-pack.stamp
frontend/src/: app.rs  header.rs  home.rs  lib.rs  login.rs  messenger.rs  router.rs
frontend/src/components/: buttons.rs
shared/: Cargo.toml
shared/src/: acl.rs  goals.rs  lib.rs  roles.rs  tasks.rs  user.rs  venture.rs
