[package]
version = "0.1.0"
name = "frontend"
authors = [" "]
description = "whip frontend"
license = "MIT"
readme = "../readme.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "d7da534dc09d69bace32dc548367afd49d2b59f4" }
shared = { path = "../shared", features = ["frontend"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']